src/index.css
:root {
    --main-bkg-color: #0D47A1;
    --alt-bkg-color: #f0f0f0;
    --main-text-color: #e0e0e0; 
    --alt-text-color: #0D47A1;
    --href-color: #1565c0;
    --content-text-color: #4f4f4f;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  color: var(--main-text-color);
}

nav .brand-logo {
  padding-left: 10%;
  color: var(--main-text-color);
}

ul:not(.browser-default) {
  padding-right: 5%;
  color: var(--main-text-color);
}

/* COLORS */

a h5, li a {
  color: var(--main-text-color) !important;
}

#nav-mobile > li a {
  color: var(--alt-text-color) !important;
}

.card-action a {
  color: var(--href-color) !important;
}

.card-content, .card-title {
 color: var(--content-text-color);
}

address a {
  color: #eee;
  font-style: normal;
  font-weight: normal;
}

.profile-picture {
  filter: none;
}

img {
  height: 100%;
  filter: grayscale(85%);
}

.carousel img {
  filter: grayscale(40%);
}

.navbar-fixed > nav,
.navbar-fixed > nav > div > div > ul {
  background-color: var(--main-bkg-color) !important;
  transition: background-color 300ms linear;
}
.navbar-fixed.scrolled > nav,
.navbar-fixed.scrolled > nav > div > div > ul  {
  background-color: var(--alt-bkg-color) !important;
  transition: background-color 300ms linear;
}

.navbar-fixed > nav > div > div .brand-logo,
.navbar-fixed > nav > div > div ul > li a {
  color: var(--main-text-color)  !important;
  transition: color 300ms linear;
}

.navbar-fixed.scrolled > nav > div > div .brand-logo,
.navbar-fixed.scrolled > nav > div > div ul > li a {
  color: var(--alt-text-color)  !important;
  transition: color 300ms linear;
}

/* GENERAL */

.title {
  border-bottom: 2px solid #949494;
}

nav {    
  -webkit-box-shadow: none;
  box-shadow: none;
}

#hero {
  margin-top: 100px;
  color: var(--main-text-color);
}

#projects, #skills, #my-story, #contact {
  margin-top: 150px;
  color: var(--main-text-color);
}

.my-story-content {
  margin: 0px 10%;
  text-align: center;
  line-height: 40px;
  font-size: 16px;
}

